Add a summary of cache state to health response and other minor changes
